--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<h1><strong>Counter Force</strong>, another great game made by Satoshi.</h1>
 					<p>.</p>
 					<ul class="actions">
-						<li><a href="#one" class="button scrolly"></a></li>
+						<li><a href="https://saatooshi.github.io/trollbird" class="button scrolly">Play Game</a></li>
 					</ul>
 				</div>
 			</section>
